--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spring.version>5.3.23</spring.version>
+
+        <spring.version>5.3.23</spring.version>
         <spring-data-jpa.version>2.7.5</spring-data-jpa.version>
         <tomcat.version>9.0.68</tomcat.version>
 
         <!-- Logging -->
-        <logback.version>1.3.4</logback.version>
+        <logback.version>1.4.4</logback.version>
         <slf4j.version>2.0.3</slf4j.version>
 
         <!--DB-->
